# GPUWatch

./: .gitignore  AGENTS.md  README.md  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.electron.json  vite.config.ts
crates/gpuwatcher-core/: Cargo.toml
crates/gpuwatcher-core/src/: command_runner.rs  config.rs  diagnostics.rs  lib.rs  models.rs  no_install_collector.rs  nvidia_smi.rs  protocol.rs  read_model.rs  repository.rs  scheduler.rs  service.rs  ssh_config_import.rs  state.rs
crates/gpuwatcher-core/src/command_runner/: caps.rs  classification.rs  process.rs  ssh_args.rs
crates/gpuwatcher-core/src/no_install_collector/: envelope.rs  script.rs  sections.rs  tests.rs
crates/gpuwatcher-core/src/nvidia_smi/: dmon.rs  gpu.rs  helpers.rs  merge.rs  pcie.rs  processes.rs  types.rs
crates/gpuwatcher-core/src/read_model/: detail.rs  mappers.rs  overview.rs  processes.rs  snapshot.rs
crates/gpuwatcher-core/src/repository/: health.rs  history.rs  mappers.rs  polling.rs  schema.rs  servers.rs  snapshots.rs
crates/gpuwatcher-core/src/service/: collector.rs  connection.rs  polling.rs  queries.rs  results.rs  seed.rs  writes.rs
crates/gpuwatcher-core/src/ssh_config_import/: parser.rs
crates/gpuwatcher-core/src/state/: database.rs
crates/gpuwatcher-core/tests/: nvidia_smi_parser.rs  ssh_config_import.rs
crates/gpuwatcher-core/tests/storage/: fixtures.rs  mod.rs  read_model_projection.rs  repository_history.rs  repository_migration.rs  (+2 more)
docs/: AGENTS.md  (+2 more)
src-tauri/: AGENTS.md  Cargo.toml  tauri.conf.json
src-tauri/fixtures/nvidia-smi/: compute_apps_disappeared_pid.csv  dmon_extra_utilization.txt  dmon_rtx_5090.txt  gpu_csv_unknown_values.csv  gpu_extra_rtx_5090.csv  gpu_extra_unknown_values.csv  pmon_graphics_only.txt  pmon_rtx_5090.txt  pmon_utilization_placeholders.txt  ps_rtx_5090.txt
src-tauri/src/: commands.rs  config.rs  error.rs  lib.rs  main.rs  models.rs  no_install_collector.rs  nvidia_smi.rs  protocol.rs  read_model.rs  repository.rs  scheduler.rs  state.rs
src-tauri/tests/: core_backend_suite.rs
(+190 files in other folders)
