[package]
name = "gpuwatcher"
version = "0.1.0"
description = "GPUWatcher desktop backend"
authors = ["GPUWatcher"]
edition = "2021"

[lib]
name = "gpuwatcher_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "gpuwatcher"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
chrono = { version = "0.4.42", features = ["serde"] }
dirs = "6.0.0"
rusqlite = { version = "0.37.0", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tauri = { version = "2.9.5", features = [] }
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["io-util", "macros", "process", "rt-multi-thread", "sync", "time"] }
uuid = { version = "1.18.1", features = ["v4"] }

[dev-dependencies]
tempfile = "3.23.0"
