[package]
name = "gpuwatcher"
version = "0.1.0"
description = "GPUWatcher desktop backend"
authors = ["GPUWatcher"]
edition = "2021"

[lib]
name = "gpuwatcher_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "gpuwatcher"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
gpuwatcher-core = { path = "../crates/gpuwatcher-core" }
tauri = { version = "2.9.5", features = [] }
tokio = { version = "1.48.0", features = ["rt-multi-thread", "time"] }

[dev-dependencies]
tempfile = "3.23.0"
